--- a/dashboard.html
+++ b/dashboard.html
@@ -35,7 +35,7 @@ body{font-family:'DM Sans',sans-serif;background:var(--off);color:var(--text);mi
 .user-name{font-size:12px;font-weight:600;color:rgba(255,255,255,0.8);line-height:1.2;word-break:break-all}
 .sign-out{font-size:10px;color:rgba(255,255,255,0.3);cursor:pointer;margin-top:2px;transition:color .2s}
 .sign-out:hover{color:rgba(255,255,255,0.6)}
-.main{margin-left:var(--sw);flex:1;display:flex;flex-direction:column;min-height:100vh}
+.main{margin-left:var(--sw);flex:1;display:flex;flex-direction:column;min-height:100vh;min-width:0}
 .topbar{background:white;border-bottom:1px solid var(--border);padding:0 24px;height:56px;display:flex;align-items:center;justify-content:space-between;position:sticky;top:0;z-index:50;flex-shrink:0}
 .topbar-left{display:flex;align-items:center;gap:12px}
 .menu-btn{display:none;background:none;border:none;cursor:pointer;padding:4px;color:var(--charcoal)}
@@ -46,7 +46,7 @@ body{font-family:'DM Sans',sans-serif;background:var(--off);color:var(--text);mi
 .btn svg{width:12px;height:12px;stroke:currentColor;fill:none;stroke-width:2.5;stroke-linecap:round}
 .btn-yellow{background:var(--yellow);color:var(--charcoal)}.btn-yellow:hover{background:#d4f030}
 .btn-ghost{background:var(--off);color:var(--muted);border:1px solid var(--border)}
-.content{padding:20px 24px;flex:1}
+.content{padding:20px 24px;flex:1;max-width:1200px}
 .stats{display:grid;grid-template-columns:repeat(4,1fr);gap:12px;margin-bottom:20px}@media(max-width:640px){.stats{grid-template-columns:1fr 1fr}}
 .stat{background:white;border:1px solid var(--border);border-radius:12px;padding:18px 20px;position:relative;overflow:hidden}
 .stat::before{content:'';position:absolute;top:0;left:0;right:0;height:3px}
@@ -221,7 +221,7 @@ select option{color:var(–charcoal)!important}
     Invoices <span class="nav-badge" id="nb-invoices">0</span>
   </div>
   <div class="nav-label" style="margin-top:8px">Tools</div>
-  <a class="nav-item" href="/map.html">
+  <a class="nav-item" href="/map.html" onclick="setMobNav('map')">
     <svg viewBox="0 0 24 24"><circle cx="12" cy="10" r="3"/><path d="M12 2a8 8 0 0 0-8 8c0 5.4 7.05 11.5 7.65 12 .19.16.51.16.7 0C12.95 21.5 20 15.4 20 10a8 8 0 0 0-8-8z"/></svg>
     Court Map
   </a>
@@ -395,23 +395,6 @@ select option{color:var(–charcoal)!important}
       <button class="btn btn-yellow" onclick="openModal('invoice')"><svg viewBox="0 0 24 24"><line x1="12" y1="5" x2="12" y2="19"/><line x1="5" y1="12" x2="19" y2="12"/></svg>New Invoice</button>
     </div>
     <div class="content"><div class="panel"><div class="tbl-wrap"><div id="invoices-list"><div class="loading"><div class="spinner"></div>Loading...</div></div></div></div></div>
-  </div>
-
-  <!-- MAP VIEW - redirects to map.html -->
-
-  <div id="view-map" class="view">
-    <div class="topbar">
-      <div class="topbar-left">
-        <button class="menu-btn" onclick="openSidebar()"><svg viewBox="0 0 24 24"><line x1="3" y1="6" x2="21" y2="6"/><line x1="3" y1="12" x2="21" y2="12"/><line x1="3" y1="18" x2="21" y2="18"/></svg></button>
-        <div class="page-title">Court Map</div>
-      </div>
-    </div>
-    <div class="content" style="display:flex;flex-direction:column;align-items:center;justify-content:center;min-height:60vh;text-align:center">
-      <div style="font-size:48px;margin-bottom:16px">🗺️</div>
-      <div style="font-family:'Barlow Condensed',sans-serif;font-size:24px;font-weight:800;color:var(--charcoal);margin-bottom:8px">Court Map</div>
-      <div style="font-size:14px;color:var(--lmuted);margin-bottom:24px;max-width:280px">View all courts, prospects, and plan your routes</div>
-      <button onclick="window.location.href='/map.html'" style="background:var(--green);color:white;border:none;border-radius:12px;padding:14px 28px;font-family:'DM Sans',sans-serif;font-size:15px;font-weight:700;cursor:pointer">Open Full Map →</button>
-    </div>
   </div>
 
 </div>
@@ -1935,7 +1918,7 @@ function toast(msg,type='ok'){const t=document.getElementById('toast');t.textCon
     <svg viewBox="0 0 24 24"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/><polyline points="14 2 14 8 20 8"/><line x1="16" y1="13" x2="8" y2="13"/><line x1="16" y1="17" x2="8" y2="17"/></svg>
     <span>Invoices</span>
   </button>
-  <button class="mob-nav-item" id="mob-nav-map" onclick="nav('map',null);setMobNav('map')">
+  <button class="mob-nav-item" id="mob-nav-map" onclick="window.location.href='/map.html'">
     <svg viewBox="0 0 24 24"><circle cx="12" cy="12" r="10"/><line x1="2" y1="12" x2="22" y2="12"/><path d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z"/></svg>
     <span>Map</span>
   </button>
