--- a/dashboard.html
+++ b/dashboard.html
@@ -36,7 +36,7 @@ body{font-family:‘DM Sans’,sans-serif;background:var(–off);color:var(–te
 .user-name{font-size:12px;font-weight:600;color:rgba(255,255,255,0.8);line-height:1.2;word-break:break-all}
 .sign-out{font-size:10px;color:rgba(255,255,255,0.3);cursor:pointer;margin-top:2px;transition:color .2s}
 .sign-out:hover{color:rgba(255,255,255,0.6)}
-.main{margin-left:var(–sw);min-height:100vh;display:flex;flex-direction:column;overflow-x:hidden}
+.main{margin-left:var(–sw);min-height:100vh;display:flex;flex-direction:column}
 .topbar{background:white;border-bottom:1px solid var(–border);padding:0 24px;height:56px;display:flex;align-items:center;justify-content:space-between;position:sticky;top:0;z-index:50;flex-shrink:0}
 .topbar-left{display:flex;align-items:center;gap:12px}
 .menu-btn{display:none;background:none;border:none;cursor:pointer;padding:4px;color:var(–charcoal)}
@@ -56,7 +56,7 @@ body{font-family:‘DM Sans’,sans-serif;background:var(–off);color:var(–te
 .stat-val{font-family:‘Barlow Condensed’,sans-serif;font-size:32px;font-weight:900;color:var(–charcoal);line-height:1;margin-bottom:4px}
 .stat-sub{font-size:11px;color:var(–lmuted)}
 .panel{background:white;border:1px solid var(–border);border-radius:12px;overflow:hidden;margin-bottom:16px}
-.panel-head{padding:14px 20px;border-bottom:1px solid var(–border);display:flex;align-items:center;justify-content:space-between;flex-wrap:wrap;gap:8px}
+.panel-head{padding:14px 20px;border-bottom:1px solid var(–border);display:flex;align-items:center;justify-content:space-between;flex-wrap:nowrap;gap:8px}
 .panel-title{font-family:‘Barlow Condensed’,sans-serif;font-size:16px;font-weight:800;color:var(–charcoal)}
 .panel-link{font-size:11px;font-weight:600;color:var(–green);cursor:pointer;background:none;border:none;font-family:‘DM Sans’,sans-serif}
 .grid2{display:grid;grid-template-columns:1fr 1fr;gap:16px;margin-bottom:16px}@media(max-width:640px){.grid2{grid-template-columns:1fr}}
@@ -74,7 +74,7 @@ padding:8px 0 max(16px,env(safe-area-inset-bottom));
 }
 .mob-nav-item{
 flex:1;display:flex;flex-direction:column;align-items:center;gap:3px;
-cursor:pointer;padding:4px 0;background:none;border:none;
+cursor:pointer;padding:4px 0;background:none;border:none;font-family:‘DM Sans’,sans-serif;
 }
 .mob-nav-item svg{width:24px;height:24px;stroke:var(–lmuted);stroke-width:1.8;fill:none;stroke-linecap:round;stroke-linejoin:round}
 .mob-nav-item span{font-size:10px;font-weight:600;color:var(–lmuted);font-family:‘DM Sans’,sans-serif}
@@ -161,7 +161,7 @@ select option{color:var(–charcoal)!important}
 .m-card-name{font-size:14px;font-weight:700;color:var(–charcoal);line-height:1.3}
 .m-card-amount{font-size:14px;font-weight:700;color:var(–charcoal);white-space:nowrap}
 .m-card-meta{font-size:12px;color:var(–lmuted);margin-bottom:8px;line-height:1.4}
-.m-card-tags{display:flex;align-items:center;gap:5px;flex-wrap:wrap;margin-bottom:10px}
+.m-card-tags{display:flex;align-items:center;gap:5px;flex-wrap:nowrap;margin-bottom:10px}
 .m-card-actions{display:flex;gap:6px;flex-wrap:nowrap;align-items:center}
 .m-card-actions .act-btn{padding:8px 14px;font-size:12px;border-radius:6px}
 @media(max-width:768px){
@@ -319,10 +319,10 @@ select option{color:var(–charcoal)!important}
     <div class="panel">
       <div class="panel-head">
         <div style="display:flex;align-items:center;gap:8px">
-          <div class="panel-title">⚠️ Service Alerts</div>
+          <div class="panel-title">🔁 Due for Service</div>
           <span id="alerts-count" style="background:#FDEEE8;color:#A84E2A;font-size:9px;font-weight:800;border-radius:10px;padding:1px 7px;line-height:1.6;display:none"></span>
         </div>
-        <a href="/map.html" style="font-size:11px;font-weight:600;color:var(--green);text-decoration:none">Open Map</a>
+        
       </div>
       <div id="d-alerts"><div class="loading"><div class="spinner"></div>Loading...</div></div>
     </div>
@@ -343,7 +343,7 @@ select option{color:var(–charcoal)!important}
         <div class="panel-title">🔔 Follow-ups Due</div>
         <span id="fu-count" style="background:#FDEEE8;color:#A84E2A;font-size:9px;font-weight:800;border-radius:10px;padding:1px 7px;line-height:1.6"></span>
       </div>
-      <a href="/map.html" style="font-size:11px;font-weight:600;color:var(--green);text-decoration:none">Open Map</a>
+      
     </div>
     <div id="d-followups"></div>
   </div>
@@ -609,8 +609,7 @@ select option{color:var(–charcoal)!important}
 
 <!-- JOB DETAIL OVERLAY -->
 
-<div id="job-detail-overlay" style="display:none;position:fixed;inset:0;background:rgba(0,0,0,0.5);z-index:500;align-items:center;justify-content:center;padding:16px">
-  <div style="background:white;border-radius:20px 20px 0 0;width:100%;max-width:600px;padding-bottom:40px">
+<div id="job-detail-overlay" style="display:none;position:fixed;inset:0;background:rgba(0,0,0,0.55);z-index:500;align-items:center;justify-content:center;padding:20px"><div style="background:white;border-radius:24px;width:100%;max-width:520px;max-height:88vh;overflow-y:auto;box-shadow:0 24px 60px rgba(0,0,0,0.3)">
     <div style="padding:12px 20px 0;text-align:center"><div style="width:36px;height:4px;background:var(--border);border-radius:2px;margin:0 auto 12px"></div></div>
     <div style="display:flex;align-items:center;justify-content:space-between;padding:0 20px 14px;border-bottom:1px solid var(--border)">
       <div>
@@ -642,8 +641,7 @@ select option{color:var(–charcoal)!important}
 
 <!-- CLIENT DETAIL OVERLAY -->
 
-<div id="client-detail-overlay" style="display:none;position:fixed;inset:0;background:rgba(0,0,0,0.5);z-index:500;align-items:center;justify-content:center;padding:16px">
-  <div style="background:white;border-radius:20px 20px 0 0;width:100%;max-width:600px;max-height:88vh;overflow-y:auto;padding-bottom:40px">
+<div id="client-detail-overlay" style="display:none;position:fixed;inset:0;background:rgba(0,0,0,0.55);z-index:500;align-items:center;justify-content:center;padding:20px"><div style="background:white;border-radius:24px;width:100%;max-width:580px;max-height:88vh;overflow-y:auto;position:relative;box-shadow:0 24px 60px rgba(0,0,0,0.3)">
     <div style="padding:16px 20px 0;display:flex;justify-content:space-between;align-items:center">
       <div style="width:36px;height:4px;background:var(--border);border-radius:2px;margin:0 auto 4px"></div>
     </div>
@@ -1763,6 +1761,7 @@ document.querySelectorAll('.overlay').forEach(o=>o.addEventListener('click',e=>{
 
 // ── NAV ──
 function nav(name,el){
+  if(name==='map'){window.location.href='/map.html';return;}
   document.querySelectorAll('.view').forEach(v=>v.classList.remove('active'));
   document.getElementById('view-'+name).classList.add('active');
   document.querySelectorAll('.nav-item').forEach(n=>n.classList.remove('active'));
