--- a/dashboard.html
+++ b/dashboard.html
@@ -115,9 +115,9 @@ body{font-family:'DM Sans',sans-serif;background:var(--off);color:var(--text);mi
 @media(max-width:768px){.row-actions{opacity:1}}
 
 /* Modal */
-.overlay{position:fixed;inset:0;background:rgba(0,0,0,0.45);z-index:200;display:none;align-items:flex-end;justify-content:center}
+.overlay{position:fixed;inset:0;background:rgba(0,0,0,0.5);z-index:200;display:none;align-items:center;justify-content:center;padding:20px}
 .overlay.open{display:flex}
-.modal{background:white;border-radius:20px 20px 0 0;padding:24px 20px 32px;width:100%;max-width:520px;max-height:90vh;overflow-y:auto}
+.modal{background:white;border-radius:24px;padding:24px 20px 32px;width:100%;max-width:520px;max-height:88vh;overflow-y:auto;box-shadow:0 24px 60px rgba(0,0,0,0.3)}
 .modal-title{font-family:'Barlow Condensed',sans-serif;font-size:22px;font-weight:800;color:var(--charcoal);margin-bottom:4px}
 
 .fg{margin-bottom:12px}
