--- a/dashboard.html
+++ b/dashboard.html
@@ -73,6 +73,7 @@ body{font-family:'DM Sans',sans-serif;background:var(--off);color:var(--text);mi
 @media(max-width:767px){
   .mob-bottom-nav{display:flex}
   .content{padding-bottom:90px!important}
+  .overlay{padding-bottom:90px!important}
 }
 .mob-nav-item{
   flex:1;display:flex;flex-direction:column;align-items:center;gap:3px;
@@ -117,7 +118,7 @@ body{font-family:'DM Sans',sans-serif;background:var(--off);color:var(--text);mi
 /* Modal */
 .overlay{position:fixed;inset:0;background:rgba(0,0,0,0.5);z-index:200;display:none;align-items:center;justify-content:center;padding:20px}
 .overlay.open{display:flex}
-.modal{background:white;border-radius:24px;padding:24px 20px 32px;width:100%;max-width:520px;max-height:88vh;overflow-y:auto;box-shadow:0 24px 60px rgba(0,0,0,0.3)}
+.modal{background:white;border-radius:24px;padding:24px 20px 90px;width:100%;max-width:520px;max-height:88vh;overflow-y:auto;box-shadow:0 24px 60px rgba(0,0,0,0.3)}
 .modal-title{font-family:'Barlow Condensed',sans-serif;font-size:22px;font-weight:800;color:var(--charcoal);margin-bottom:4px}
 
 .fg{margin-bottom:12px}
